objects/CPN_Account_Matching__c.object
<CustomObject><fields>
        <fullName>Account_CDS_Id__c</fullName>
        <formula>Account__r.CDS_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CDS Id</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Id__c</fullName>
        <description>Account id</description>
        <inlineHelpText>Child Account id</inlineHelpText>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Industry__c</fullName>
        <formula>TEXT( Account__r.Industry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Industry</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Latin_Name__c</fullName>
        <formula>Account__r.Account_Name_Latin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Latin Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Name_Changed_Date__c</fullName>
        <description>Date/Time when child account name/latin name was changed</description>
        <formula>Account__r.Account_Name_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date/Time when child account name/latin name was changed</inlineHelpText>
        <label>Account Name Changed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Territory_Name__c</fullName>
        <formula>Account__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Territory Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPN Account Matchings</relationshipLabel>
        <relationshipName>CPN_Account_Matchings</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Existing_Child_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Existing peer (child) account id</description>
        <label>Existing Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPN Account Matchings (Existing Child Account)</relationshipLabel>
        <relationshipName>CPN_Account_Matchings2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Is_Account_CPN__c</fullName>
        <formula>Account__r.Is_Corporate_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Account CPN</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Is_Parent_CPN__c</fullName>
        <formula>Parent_Account__r.Is_Corporate_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent CPN</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Match_Date__c</fullName>
        <label>Match Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Match_Local__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Local</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Match_Score__c</fullName>
        <label>Match Score</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Match_Status_Changed_Date__c</fullName>
        <description>The Date when CPN Match Status was updated</description>
        <label>Match Status Changed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Match_Status__c</fullName>
        <label>Match Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Parent</fullName>
                </value>
                <value>
                    <fullName>Existing Peer</fullName>
                </value>
                <value>
                    <fullName>Proposed New Parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Parent_Account_CDS_Id__c</fullName>
        <formula>Parent_Account__r.CDS_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account CDS Id</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Parent_Account_Id__c</fullName>
        <description>Potential parent account</description>
        <inlineHelpText>Potential Parent Account Id</inlineHelpText>
        <label>Parent Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Parent_Account_Latin_Name__c</fullName>
        <formula>Parent_Account__r.Account_Name_Latin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Latin Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Parent_Account_Name_Changed_Date__c</fullName>
        <description>Date/Time when Parent account name was changed</description>
        <formula>Parent_Account__r.Account_Name_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date/Time parent account name/latin name was changed</inlineHelpText>
        <label>Parent Account Name Changed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>Parent_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPN Account Matchings (Parent Account)</relationshipLabel>
        <relationshipName>CPN_Account_Matchings1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>is_Account_Name_Changed__c</fullName>
        <description>Flag if Account Name/Latin Name was changed after the Matching Change Date</description>
        <formula>OR (  Account_Name_Changed_Date__c &gt; Match_Status_Changed_Date__c ,  Parent_Account_Name_Changed_Date__c &gt;Match_Status_Changed_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set to True when Account Name/Latin Name was changed after the Matching Change Date</inlineHelpText>
        <label>is Account Name Changed</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>The object has been populated by BODI job and contains the list of the  accounts with the potential parent account ids</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>CPN Account Matching</label><nameField>
        <label>CPN Account Matching Name</label>
        <type>Text</type>
    </nameField><pluralLabel>CPN Account Matchings</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>Match_Date__c</columns>
        <columns>Match_Status_Changed_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Match_Type__c</columns>
        <columns>Match_Status__c</columns>
        <columns>Is_Parent_CPN__c</columns>
        <columns>Parent_Account_Id__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Parent_Account_Latin_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Latin_Name__c</columns>
        <columns>Is_Account_CPN__c</columns>
        <columns>Account_Industry__c</columns>
        <columns>Account_Territory_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Match_Type__c</field>
            <operation>equals</operation>
            <value>Existing Peer</value>
        </filters>
        <label>Existing Peer</label>
        <language>en_US</language>
    </listViews><validationRules>
        <fullName>Parent_Account_Has_CPN_Flag</fullName>
        <active>true</active>
        <description>Account can't be set to Parent if it's not marked as CPN</description>
        <errorConditionFormula>AND(NOT(Parent_Account__r.Is_Corporate_Parent__c ), ISPICKVAL(Match_Status__c,'Confirmed'))</errorConditionFormula>
        <errorMessage>Parent Account must be CPN</errorMessage>
    </validationRules><validationRules>
        <fullName>Update_Match_Status</fullName>
        <active>true</active>
        <description>Users can't update match status for confirmed records</description>
        <errorConditionFormula>AND(ISCHANGED( Match_Status__c ),  ISPICKVAL(PRIORVALUE(Match_Status__c),'Confirmed'))</errorConditionFormula>
        <errorDisplayField>Match_Status__c</errorDisplayField>
        <errorMessage>You cannot update status of the Confirmed records</errorMessage>
    </validationRules></CustomObject>